--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
                 <div class="bar-break-wrap">
                     <div class="bar-break"><span>Не владею</span></div>
                     <div class="bar-break"><span>Использую готовые решения</span></div>
-                    <div class="bar-break"><span>Использую готовые решения и умею передалывать</span></div>
+                    <div class="bar-break"><span>Использую готовые решения и умею переделывать</span></div>
                     <div class="bar-break"><span>Пишу сложный JS c нуля</span></div>
                 </div>
                 <div class="bar">
